# util-cli

./: .gitignore  CLAUDE.md  README.md  makefile  pyproject.toml
src/: __main__.py  cli.py
src/asctl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/commands/: claude.py  config.py  demo.py  gemini.py  hello.py  scrape.py  tasks.py
src/python_cli_framework.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/util/: config.py  interact.py  logging.py  pyremindkit.py  tasks.py
