[project]
name = "util"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "build>=1.2.2.post1",
    "click>=8.1.7",
    "setuptools>=75.6.0",
    "BeautifulSoup4",
    "requests>=2.32.3",
    "google-genai>=1.11.0",
    "click-config-file>=0.6.0",
    "configparser>=7.2.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
util = "cli:cli"
